[package]
name = "docker_sample"
version = "1.0.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-broker = "0.4"
actix-codec = "0.5"
actix-cors = "0.6"
actix-files = "0.6"
actix-http = "3"
actix-identity = "0.5"
actix-multipart = "0.6"
actix-multipart-derive = "0.6"
actix-protobuf = "0.9"
actix-session = "0.7"
actix-test = "0.1"
actix-tls = "3"
actix-utils = "3"
actix-web = "4.3"
actix-web-actors = "4.1"
actix-web-lab = "0.19"
actix-ws = "0.2.5"
awc = "3"

derive_more = "0.99.7"
env_logger = "0.10"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.24.2", features = ["sync"] }
